--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "mongodb": "^3.6.10",
     "nodemon": "^2.0.12",
-    "telegraf": "^4.4.1"
+    "telegraf": "^4.4.1",
+    "telegraf-session-mongodb": "^2.0.2"
   }
 }
