--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nodemon": "^2.0.12",
     "telegraf": "^4.4.1",
     "telegraf-session-mongodb": "^2.0.2"
+  },
+  "engines": {
+    "node": "15.x"
   }
 }
