--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "axios": "^0.21.1",
     "dateformat": "^4.5.1",
     "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.10",
     "nodemon": "^2.0.12",
     "telegraf": "^4.4.1",
-    "telegraf-session-mongodb": "^2.0.2",
-    "timezones-list": "^3.0.1"
+    "telegraf-session-mongodb": "^2.0.2"
   },
   "engines": {
     "node": "15.x"
