--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.10",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.12",
     "telegraf": "^4.4.1",
     "telegraf-session-mongodb": "^2.0.2"
