--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "dateformat": "^4.5.1",
     "dotenv": "^10.0.0",
     "fastify": "^3.27.3",
+    "fastify-static": "^4.5.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.10",
     "node-schedule": "^2.1.0",
