--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
 	listen [::]:80;
 
-    server_name *.miner.n1kko777-dev.ru miner.n1kko777-dev.ru;
+    server_name miner.n1kko777-dev.ru;
     client_max_body_size 5M;
 
     location / {
