--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,10 +10,11 @@ server {
     client_max_body_size 5M;
 
     location / {
-        proxy_pass http://minerbotnginx;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
-        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://minerbotnginx;
     }
 
     error_log /var/log/nginx/minerbot_error.log;
