--- a/bot/package.json
+++ b/bot/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dateformat": "^4.5.1",
+    "fastify": "^3.27.4",
+    "fastify-static": "^4.6.1",
     "moment": "^2.29.1",
     "mongodb": "^3.6.10",
     "node-schedule": "^2.1.0",
