--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
-upstream minerfastifynginx {
-    server minerfastify:3000;
+upstream minerbotnginx {
+    server minerbot:3000;
 }
 
 server {
@@ -14,9 +14,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://minerfastifynginx;
+        proxy_pass http://minerbotnginx;
     }
 
-    error_log /var/log/nginx/minerfastify_error.log;
-    access_log /var/log/nginx/minerfastify_access.log;
+    error_log /var/log/nginx/minerbot_error.log;
+    access_log /var/log/nginx/minerbot_access.log;
 }
