--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "dateformat": "^4.5.1",
     "fastify": "^3.27.4",
+    "fastify-mongodb": "^4.1.1",
     "fastify-static": "^4.6.1",
     "moment": "^2.29.1",
     "mongodb": "^3.6.10",
