--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "start:dev": "concurrently \"lt --port 3000 --subdomain n1kko777\" \"nodemon index.js\""
   },
   "author": "n1kko777",
   "license": "ISC",
@@ -22,7 +22,9 @@
     "telegraf-session-mongodb": "^2.0.2"
   },
   "devDependencies": {
+    "concurrently": "^7.1.0",
     "jshint": "^2.13.4",
+    "localtunnel": "^2.0.2",
     "nodemon": "^2.0.15"
   }
 }
